[metadata]
name = cov-tree
version = attr: cov_tree.version.__version__
author = Bernhard Röttgers
description = Tool for hierarchical coverage.
long_description = file: README.md
# url = https://github.com/Berni-R/bg4py
keywords = coverage
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8, <4
install_requires = file: requirements.txt

[options.extras_require]
dev = file: requirements-dev.txt

[options.package_data]

[options.entry_points]
console_scripts =
    cov-tree = cov_tree.cmdline:main

[options.packages.find]
exclude =
    test*
    docs*


[flake8]
include = cov_tree, test
exclude =
    .git,
    __pycache__,
per-file-ignores =
    __init__.py: F401
    print_test.py: W291
extend-ignore = E203
max-line-length = 80
max-complexity = 10

[coverage:run]
omit = test/*

[coverage:report]
show_missing = True
skip_empty = True
exclude_lines =
    @(abc\.)?abstractmethod
    \.\.\.

[mypy]
packages = cov_tree, test
# plugins = numpy.typing.mypy_plugin
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
